syntax = "proto3";
package proto;

message RecipeMessage {
  string id = 1;
  string name = 2;
  RecipeType type = 3;
  repeated bytes images = 4;
  string link_to_website = 5;
  repeated Ingredient ingredients = 6;
  repeated Step steps = 7;
  RecipeDifficulty difficulty = 8;
  repeated string keywords = 9;
  bool favorited = 10;
}

message RecipeId {
  string id = 1;
}

message Status {
  string description = 1;
  int32 code = 2;
  bool is_error = 3;
}

message Empty {}

message Pong {
  string response = 1;
}

service Recipe {
  rpc AddRecipe(RecipeMessage) returns (Status);
  rpc GetRecipe(RecipeId) returns (RecipeMessage);
  rpc GetAllRecipes(Empty) returns (stream RecipeMessage);
  rpc UpdateRecipe(RecipeMessage) returns (Status);
  rpc DeleteRecipe(RecipeId) returns (Status);
  rpc Ping(Empty) returns (Pong);
}

message Ingredient {
  string name = 1;
  double measurement = 2;
  IngredientUnits unit = 3;
}

message Step {
  int32 step_number = 1;
  string description = 2;
  double time = 3;
  StepType step_type = 4;
}

enum RecipeType {
  BREAKFAST = 0;
  LUNCH = 1;
  DINNER = 2;
  APPETIZER = 3;
  SNACK = 4;
  DRINK = 5;
}

enum IngredientUnits {
  BOTTLE = 0;
  CAN = 1;
  CLOVE = 2;
  CUP = 3;
  GALLON = 4;
  NONE = 5;
  OUNCE = 6;
  PINCH = 7;
  PINT = 8;
  POUND = 9;
  QUART = 10;
  SHOT = 11;
  TABLESPOON = 12;
  TEASPOON = 13;
}

enum StepType {
  BAKE = 0;
  BOIL = 1;
  BROIL = 2;
  COOK = 3;
  CUT = 4;
  CHOP = 5;
  DICE = 6;
  FREEZE = 7;
  FRY = 8;
  GRILL = 9;
  JUICE = 10;
  MICROWAVE = 11;
  MIX = 12;
  POUR = 13;
  PREPARE = 14;
  ROAST = 15;
  SEASON = 16;
  SEPARATE = 17;
  SIMMER = 18;
  SHRED = 19;
  STEW = 20;
  STEAM = 21;
  STIR = 22;
  TOP = 23;
  WASH = 24;
  ZEST = 25;
}

enum RecipeDifficulty {
  EASY = 0;
  MEDIUM = 1;
  HARD = 2;
}
